Add shortcut customization options view

--- a/options/options.html
+++ b/options/options.html
@@ -9,9 +9,10 @@
     <form id="preferences">
         <label>Hotkey</label>
         <input type="text" id="shortcut" />
-        <button type="submit">Apply</button>
+        <button type="submit">Save</button>
         <button id="restore-default-shortcut">Restore Default</button>
     </form>
+    <script src="hotkeys.min.js"></script>
     <script src="options.js"></script>
 </body>
 
