Add content listener for custom hotkey

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -6,11 +6,11 @@
 </head>
 
 <body>
-    <form id="preferences">
+    <form id="options">
         <label>Hotkey</label>
-        <input type="text" id="shortcut" />
+        <input type="text" id="hotkey" />
         <button type="submit">Save</button>
-        <button id="restore-default-shortcut">Restore Default</button>
+        <button id="restore-default-hotkey">Restore Default</button>
     </form>
     <script src="options.js"></script>
 </body>
