--- a/preferences.html
+++ b/preferences.html
@@ -14,18 +14,11 @@
     </head>
     <body>
         <p>
-            <span> Check the box </span>
             <input id='longClickToggle' type='checkbox'>
-            <span> to pin/unpin a tab when the mouse's left button is held down for </span>
+            <span> pin/unpin a tab when the mouse's left button is held down for </span>
             <input id='longClickToggleTime' type='number'>
-            <span> milliseconds or more. The allowed time is between </span>
-            <span id='minLongClickToggleTimeLabel'> </span> 
-            <span> and </span>
-            <span id='maxLongClickToggleTimeLabel'> </span>
-            <span>, both inclusive. Breaching the limit will automatically use the last entered valid value. The recommended value is </span>
-            <span id='defaultLongClickToggleTimeLabel'> </span>
-            <span> . </span>
+            <span> milliseconds. Recommended: 600ms.
         </p>
-        <script src='preferences.js'> </script>
+        <script src='_build/default/prefs.bc.js'> </script>
     </body>
 </html>
