Rewrite dune to generate a structured build output

--- a/preferences.html
+++ b/preferences.html
@@ -19,6 +19,6 @@
             <input id='longClickToggleTime' type='number'>
             <span> milliseconds. Recommended: 600ms.
         </p>
-        <script src='prefs.bc.js'> </script>
+        <script src='./js/prefs.bc.js'> </script>
     </body>
 </html>
