WIP: preferences form

--- a/preferences.html
+++ b/preferences.html
@@ -13,12 +13,13 @@
         </style>
     </head>
     <body>
-        <p>
-            <input id='longClickToggle' type='checkbox'>
-            <span> pin/unpin a tab when the mouse's left button is held down for </span>
-            <input id='longClickToggleTime' type='number'>
-            <span> milliseconds. Recommended: 600ms.
-        </p>
+        <div id='root'></div>
+        <!-- <p> -->
+        <!--     <input id='longClickToggle' type='checkbox'> -->
+        <!--     <span> pin/unpin a tab when the mouse's left button is held down for </span> -->
+        <!--     <input id='longClickToggleTime' type='number'> -->
+        <!--     <span> milliseconds. Recommended: 600ms. -->
+        <!-- </p> -->
         <script src='./js/prefs.bc.js'> </script>
     </body>
 </html>
