--- a/preferences.html
+++ b/preferences.html
@@ -5,7 +5,8 @@
         <title> Preferences for Pin Unpin Tab </title>
     </head>
     <body>
+        <p> Prefs </p>
         <div id='root'></div>
-        <script src='./js/prefs.bc.js'> </script>
+        <script src='./prefs.prod.js'> </script>
     </body>
 </html>
