Improve parsing and ui of preferences

--- a/preferences.html
+++ b/preferences.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset='utf-8'>
         <title> Preferences for Pin Unpin Tab </title>
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <p> Prefs </p>
-        <div id='root'></div>
+        <div id='root' class="box"></div>
         <script src='./prefs.prod.js'> </script>
     </body>
 </html>
