Rewrite preferences module in ocaml

--- a/src/preferences.html
+++ b/src/preferences.html
@@ -30,7 +30,7 @@
         </div>
     </form>
 </div>
-<script src='./prefs.prod.js'></script>
+<script src='./preferences.build.js'></script>
 </body>
 
 </html>
